--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@supabase/supabase-js": "^2.48.1",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
