creacion de types falllida

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FRONTEND",
-    "slug": "FRONTEND",
+    "name": "GOPOOL",
+    "slug": "GOPOOL",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon_chayanne.jpg",
