--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "gen:types": "npx supabase gen types typescript --project-id hpgixpjawpbiqfmsvxfo > ./app/db_types.ts"
   },
   "jest": {
     "preset": "jest-expo"
@@ -52,6 +53,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
+    "supabase": "^2.12.1",
     "typescript": "^5.3.3"
   },
   "private": true
