--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "expo-symbols": "^0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
+    "mapbox-gl": "^3.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.0.0",
     "react-native": "^0.76.6",
     "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
