--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -39,13 +40,12 @@
     "react-native": "^0.76.6",
     "react-native-debugger": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "react-native-maps": "1.18.0",
-    "expo-location": "~18.0.7"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -56,7 +56,7 @@
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
     "supabase": "^2.12.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3"
   },
   "private": true
 }
