--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
