--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.3",
@@ -55,6 +56,7 @@
     "@babel/core": "^7.25.2",
     "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.12",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "expo-module-scripts": "^4.0.4",
