--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.3",
@@ -52,7 +52,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-secure-store": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
