--- a/eas.json
+++ b/eas.json
@@ -12,10 +12,10 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true,
-      "android": {
-        "buildType": "apk"
-      }
+      "autoIncrement": true
+      // "android": {
+      //   "buildType": "apk"
+      // }
     }
   },
   "submit": {
