--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.9.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "^0.2.1",
@@ -52,9 +54,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-secure-store": "~14.0.1",
-    "expo-image-picker": "~16.0.6"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -65,6 +65,7 @@
     "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "supabase": "^2.20.5",
     "typescript": "^5.7.3"
