--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "frontend",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "expo-router/entry",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -16,59 +17,57 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-community/slider": "^4.5.6",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.9.0",
     "dotenv": "^16.6.1",
-    "expo": "~52.0.26",
-    "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
-    "expo-font": "~13.0.3",
-    "expo-haptics": "~14.0.1",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-location": "~18.0.7",
-    "expo-router": "~4.0.17",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "^0.29.21",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "^0.2.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "18.3.1",
-    "react-native": "^0.76.6",
+    "expo": "^54.0.13",
+    "expo-blur": "~15.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
+    "expo-router": "~6.0.12",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-debugger": "^1.1.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-maps": "1.18.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "~19.1.10",
+    "@types/react-test-renderer": "~19.1.0",
     "expo-module-scripts": "^4.0.4",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~54.0.2",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.0",
     "supabase": "^2.20.5",
-    "typescript": "^5.7.3"
-  },
-  "private": true
+    "typescript": "^5.3.3"
+  }
 }
