--- a/Gopool/package.json
+++ b/Gopool/package.json
@@ -43,8 +43,10 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/react": "~19.1.0",
+    "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "typescript": "~5.9.2"
   },
   "private": true
